# snowdrop-id-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  justfile
.github/workflows/: ci.yml  publish.yml
docs/: RELEASING.md  pg-machine-id-leasing.md
snowdrop-id/: Cargo.toml
snowdrop-id-cli/: Cargo.toml  README.md
snowdrop-id-cli/src/: main.rs
snowdrop-id-postgres/: Cargo.toml  README.md
snowdrop-id-postgres/src/: lib.rs
snowdrop-id-postgres/tests/: lease.rs
snowdrop-id/src/: base62.rs  clock.rs  epoch.rs  generator.rs  global.rs  id.rs  lib.rs  pg_machine_id.rs  serde_support.rs  sqlx_support.rs
snowdrop-id/tests/: features.rs  global.rs  global_async.rs  global_uninit.rs  pg_machine_id.rs  spec_vectors.rs  sqlx_sqlite.rs
src/: clock.rs  epoch.rs  id.rs  lib.rs  machine.rs  serde_support.rs  sqlx_support.rs
tests/: features.rs  sqlx_sqlite.rs
