[package]
name = "snowdrop-id"
description = "Snowdrop IDs: 63-bit, roughly monotonic, Snowflake-interchangeable identifiers with a very short base62 form"
readme = "../README.md"
keywords = ["snowflake", "id", "identifier", "base62", "unique"]
categories = ["data-structures", "database", "web-programming"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# docs.rs builds with default features unless told otherwise, which would
# hide generate_async, serde_u64, and the sqlx impls from the docs.
[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["dep:serde"]
tokio = ["dep:tokio"]
sqlx-postgres = ["dep:sqlx", "sqlx/postgres"]
sqlx-mysql = ["dep:sqlx", "sqlx/mysql"]
sqlx-sqlite = ["dep:sqlx", "sqlx/sqlite"]

[dependencies]
serde = { version = "1", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = ["time"] }
sqlx = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }

[[test]]
name = "sqlx_sqlite"
required-features = ["sqlx-sqlite"]
